# k-youth-data-ai

./: README.md
week_1/: .gitignore  README.md  main.py  paths.py  pyproject.toml
week_1/src/: ingestor.py  loader.py  processor.py  profiler.py
week_2/: .env.example  .gitignore  README.md  aliases.py  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week_3/: .env.example  .gitignore  README.md  docker-compose.yml
week_3/backend/: Dockerfile  pyproject.toml
week_3/backend/src/: app.py
week_3/backend/src/week_2/: find_skill_gaps.py  prompt_model.py
week_3/frontend/: Dockerfile  pyproject.toml
week_3/frontend/src/: app.py
week_3/frontend/src/styles/: style.css
week_3/frontend/src/templates/: chat_page.html
