[project]
name = "backend"
version = "0.1.0"
description = "W3 System Integration & Application (Backend Server)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "ollama>=0.6.2",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "ruff>=0.15.14",
    "uvicorn>=0.48.0",
]
