[project]
name = "frontend"
version = "0.1.0"
description = "W3 System Integration & Application (Frontend Server)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
    "uvicorn>=0.48.0",
]
